# TE2Rules

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  baseline.py  baseline_experiment.py  data_prep.py  data_prep_adult.py  data_prep_breast.py  data_prep_compas.py  data_prep_contraception.py  data_prep_heart.py  data_prep_mushroom.py  data_prep_spam.py  evaluate.py  experiments.ipynb  global_baseline_experiment.py  global_te2rules_experiment.py  intrees_baseline.R  outcome_explanation_experiments.py  plot_performance.py  plot_scalability.py  rulefit_baseline.py  setup.cfg  skope_baseline.py  te2rule.py  train.py  trainer.py
baseline/: intrees_baseline.R  rulefit_baseline.py  skope_baseline.py
data/adult/: test.csv  test_raw.csv  train.csv  train_raw.csv
data/bank/: test.csv  test_raw.csv  train.csv  train_raw.csv
data/breast/: test.csv  test_raw.csv  train.csv  train_raw.csv
data/compas/: test.csv  test_raw.csv  train.csv  train_raw.csv
data_prep/: data_prep.py  data_prep_adult.py  data_prep_bank.py  data_prep_breast.py  data_prep_compas.py
demo/: converter_utils.py  global_baseline_experiment.py  global_te2rules_experiment.py  outcome_explanation_experiments.py  run_defrag.py  run_intrees.R  run_intrees.py  run_te2rules.py  trainer.py  xgb_adapter.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
experiments/: global_baseline_experiment.py  global_te2rules_experiment.py  outcome_explanation_experiments.py
lib/: adapter.py  rule.py  rule_backup.py  rule_builder.py  trainer.py  tree.py
models/adult/: clf.json  clf.model
models/adult/intrees/: pred_test.csv  pred_test_rules.csv  pred_test_score.csv  pred_train.csv  pred_train_rules.csv  pred_train_score.csv  rules.txt
models/bank/: clf.json  clf.model
models/bank/intrees/: pred_test.csv  pred_test_rules.csv  pred_test_score.csv  pred_train.csv  pred_train_rules.csv  pred_train_score.csv  rules.txt
models/breast/: clf.json  clf.model
models/breast/intrees/: pred_test.csv  pred_test_rules.csv  pred_test_score.csv  pred_train.csv  pred_train_rules.csv  pred_train_score.csv  rules.txt
models/compas/: clf.json  clf.model
models/compas/intrees/: pred_test.csv  pred_test_rules.csv  pred_test_score.csv  pred_train.csv  pred_train_rules.csv  pred_train_score.csv  rules.txt
notebooks/: demo-adult-income.ipynb  util.py
te2rule/: adapter.py  adapter_new.py  explainer.py  rule.py  rule_builder.py  tree.py
te2rules/: __init__.py  adapter.py  explainer.py  rule.py  tree.py
tests/: test_adapter.py  test_explainer.py  test_forest.py  test_rule.py  test_tree.py  test_xgb_adapter.py
utils/: experiment_utils.py
