[metadata]
name = te2rules
version = attr: te2rules.__version__
author = G Roshan Lal
author_email = groshanlal@gmail.com
description = Python Library to explain tree ensembles using rules
long_description = file: README.md
long_description_content_type = text/markdown
license = Creative Commons Attribution-NonCommercial 4.0 International Public License
license_files = LICENSE
url = https://github.com/linkedin/TE2Rules
project_urls = 
    Bug Tracker = https://github.com/linkedin/TE2Rules/issues
    Source Code = https://github.com/linkedin/TE2Rules
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Common Public License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >=1.19.1
    pandas >=1.2.4
    scikit-learn >=1.0.1
    six >=1.15.0
    tqdm >=4.43.0
    xgboost >=1.4.2

[options.packages.find]
include=
    te2rules

[flake8]
max-line-length = 88
ignore = W503

[tool:pytest]
minversion = 6.0
testpaths =
    tests

[mypy]
ignore_missing_imports = True
warn_unused_configs = True
warn_return_any = True
disallow_untyped_defs = True
